--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -27,8 +27,9 @@
     left: 25%;
     width: 50%;  
 }
+
 .input_recherche{
-    
+    background-color: white;
     border: none;
     border-radius: 50px 0px 0px 50px ;
     width: 90%;
@@ -40,15 +41,6 @@
 .input_recherche:focus{
     outline: none;
     font-size: medium;
-}
-.bouton_location{
-    border-radius: 0px 50px 50px 0px ;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10%;
-    cursor: pointer;
 }
 
 .fi-rs-marker{
