--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -193,6 +193,7 @@ nav ul li:hover > ul{
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    background-color: var(--light-background-color-main-transparent);
 	}
 
 	nav ul li {
