--- a/src/app/modules/admin/planning/planning.component.html
+++ b/src/app/modules/admin/planning/planning.component.html
@@ -58,7 +58,7 @@
             <div class="dayBackground" cdkDropList #day0list="cdkDropList" [cdkDropListData]="daysdata[0]"
                 [cdkDropListConnectedTo]="[day0list,day1list,day2list,day3list,day4list,day5list]"
                 (cdkDropListDropped)="onDrop($event)">
-                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[0].team" cdkDrag>
+                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[0]?.team" cdkDrag>
                     {{garbageCollector}}
                 </div>
             </div>
@@ -68,7 +68,7 @@
             <div class="dayBackground" cdkDropList #day1list="cdkDropList" [cdkDropListData]="daysdata[1]"
                 [cdkDropListConnectedTo]="[day0list,day1list,day2list,day3list,day4list,day5list]"
                 (cdkDropListDropped)="onDrop($event)">
-                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[1].team" cdkDrag>
+                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[1]?.team" cdkDrag>
                     {{garbageCollector}}
                 </div>
             </div>
@@ -78,7 +78,7 @@
             <div class="dayBackground" cdkDropList #day2list="cdkDropList" [cdkDropListData]="daysdata[2]"
                 [cdkDropListConnectedTo]="[day0list,day1list,day2list,day3list,day4list,day5list]"
                 (cdkDropListDropped)="onDrop($event)">
-                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[2].team" cdkDrag>
+                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[2]?.team" cdkDrag>
                     {{garbageCollector}}
                 </div>
             </div>
@@ -88,7 +88,7 @@
             <div class="dayBackground" cdkDropList #day3list="cdkDropList" [cdkDropListData]="daysdata[3]"
                 [cdkDropListConnectedTo]="[day0list,day1list,day2list,day3list,day4list,day5list]"
                 (cdkDropListDropped)="onDrop($event)">
-                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[3].team" cdkDrag>
+                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[3]?.team" cdkDrag>
                     {{garbageCollector}}
                 </div>
             </div>
@@ -98,7 +98,7 @@
             <div class="dayBackground" cdkDropList #day4list="cdkDropList" [cdkDropListData]="daysdata[4]"
                 [cdkDropListConnectedTo]="[day0list,day1list,day2list,day3list,day4list,day5list]"
                 (cdkDropListDropped)="onDrop($event)">
-                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[4].team" cdkDrag>
+                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[4]?.team" cdkDrag>
                     {{garbageCollector}}
                 </div>
             </div>
@@ -108,7 +108,7 @@
             <div class="dayBackground" cdkDropList #day5list="cdkDropList" [cdkDropListData]="daysdata[5]"
                 [cdkDropListConnectedTo]="[day0list,day1list,day2list,day3list,day4list,day5list]"
                 (cdkDropListDropped)="onDrop($event)">
-                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[5].team" cdkDrag>
+                <div class="name-block" *ngFor="let garbageCollector of weekPlanning[5]?.team" cdkDrag>
                     {{garbageCollector}}
                 </div>
             </div>
