--- a/src/app/modules/garbage-collector/components/declaration/declaration.component.html
+++ b/src/app/modules/garbage-collector/components/declaration/declaration.component.html
@@ -1,7 +1,5 @@
-<div class="modal" id="declaration">
-  <div class="modal-content background-gradient">
-
-    <h2>Nouvelle déclaration</h2>
+<app-header-gc></app-header-gc>
+ <h2>Nouvelle déclaration</h2>
 
     <form class="auth-form" id="declaration-form" #declarationForm="ngForm"
       (ngSubmit)="declarationForm.form.valid && onSubmit(declarationForm)">
@@ -31,5 +29,3 @@
       </div>
 
     </form>
-  </div>
-</div>
