--- a/src/app/components/mentionsLegales/mentions.component.html
+++ b/src/app/components/mentionsLegales/mentions.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div style="width: 70%; margin-left: auto; margin-right: auto; padding-top: 8%;">
     <h2 style="text-align:center">Mentions Legales</h2>
     <br><br>
