--- a/src/app/partials/filters-bennes/filters-bennes.component.css
+++ b/src/app/partials/filters-bennes/filters-bennes.component.css
@@ -23,7 +23,7 @@ background-color: rgba(233, 229, 251, 0.747);
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     cursor: pointer;
 }
-.bouton_filtres:hover{
+.bouton_filtres:hover, .bouton_filtres.active{
     background-color: #74EBD5;
     background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
     color: rgb(255, 255, 255);
