--- a/src/app/components/auth/auth.component.css
+++ b/src/app/components/auth/auth.component.css
@@ -3,7 +3,9 @@ h2 {
     margin-bottom: 5%;
     color: white;
   }
-  
+.coEnCours{
+text-align: center;
+  }
   .text {
     margin-bottom: 50px;
   }
