--- a/src/app/components/auth/form-login/form-login.component.html
+++ b/src/app/components/auth/form-login/form-login.component.html
@@ -1,7 +1,8 @@
 <form class="auth-form" id="login-form" #loginForm="ngForm" (ngSubmit)="loginForm.form.valid && onSubmit(loginForm)">
 
     <div class="auth-form_input-block">
-        <input id="email" name="email" (ngModelChange)="formUnknownError = false" ngModel #email="ngModel" type="text" placeholder="E-mail" required>
+        <input id="email" name="email" (ngModelChange)="formUnknownError = false" ngModel #email="ngModel" type="text"
+            placeholder="E-mail" required>
     </div>
 
     <div *ngIf="email.invalid && email.touched || isSubmitted">
@@ -11,7 +12,8 @@
     </div>
 
     <div class="auth-form_input-block">
-        <input id="password" name="password" (ngModelChange)="formUnknownError = false" ngModel #password="ngModel" type="password" placeholder="Mot de passe" required>
+        <input id="password" name="password" (ngModelChange)="formUnknownError = false" ngModel #password="ngModel"
+            type="password" placeholder="Mot de passe" required>
     </div>
     <div *ngIf="password.invalid && password.touched || isSubmitted">
         <p class="error" *ngIf="password.errors?.['required']">
@@ -19,11 +21,11 @@
         </p>
     </div>
 
-    <p [ngStyle]="{'visibility': formUnknownError || isSubmitted ? 'visible' : 'hidden'}" 
-    [ngClass]="formUnknownError ? 'error' : ''">
+    <p class="coEnCours" [ngStyle]="{'visibility': formUnknownError || isSubmitted ? 'visible' : 'hidden'}"
+        [ngClass]="formUnknownError ? 'error' : ''">
         <ng-container *ngIf="formUnknownError">Identifiant invalide</ng-container>
-        <ng-container *ngIf="isSubmitted && loginForm.form.valid">Connexion en cours</ng-container>
+        <ng-container  *ngIf="isSubmitted && loginForm.form.valid">Connexion en cours ...</ng-container>
     </p>
 
-    <button [disabled]="isSubmitted" (click)="isSubmitted = true" type="submit">Je me connecte !</button>
+    <button (click)="isSubmitted = true" type="submit">Je me connecte !</button>
 </form>
