--- a/src/app/modules/admin/declaration-detail/declaration-detail.component.css
+++ b/src/app/modules/admin/declaration-detail/declaration-detail.component.css
@@ -1,3 +1,17 @@
+.container{
+    padding: 1rem;
+    
+
+}
+hr{
+    margin: 1rem 0;
+}
+h1{
+    text-align: center;
+}
+
+
+
 table {
 	--accent-color: #2f4b4a;
 	--text-color: slategray;
