--- a/src/app/components/home/accueil/accueil.component.html
+++ b/src/app/components/home/accueil/accueil.component.html
@@ -1,18 +1,20 @@
 <div id="accueil">
     <div class="bloc_vert">
         <div class="text_acceuil">
-            <h1 class="title_accueil animate-charcter">UNE <br> COMMUNAUTE <br> AUTOUR DES DECHETS.</h1>
+            <h1 class="title_accueil animate-charcter">UNE <br> COMMUNAUTE <br> AUTOUR DES DECHETS.</h1><br>
             <h4 class="subtitle_accueil">
                 Ben gagne du temps, et fait gagner du temps aux éboueurs. Faites comme Ben !
-            </h4>
+            </h4><br>
             <div class="dispay_button">
-                <a class="button_redirect_user" routerLink="/inscription">En savoir plus ...</a>
+                <a class="button_redirect_user" routerLink="/inscription">En savoir plus ...</a><br>
                 <a class="button_redirect_eboueur" routerLink="/connexion">MON ESPACE MEMBRE</a>
             </div>
         </div>
+        <div id="tel">
+            <img class="telephone" src="../../../../assets/images/iphone_frame.png" alt="telephone">
+        </div>
     </div>
 
-    <img class="telephone" src="../../../../assets/images/iphone_frame.png" alt="telephone">
 
     <p class="reseaux_sociaux">Retrouvez nous sur
         <a href="https://facebook.com/"><i class="fi fi-brands-facebook"></i></a>
@@ -21,3 +23,33 @@
     </p>
 
 </div>
+    <!-- Messenger Plugin de discussion Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Plugin de discussion code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "104088039219024");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v15.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/fr_FR/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
