--- a/src/app/components/home/accueil/accueil.component.html
+++ b/src/app/components/home/accueil/accueil.component.html
@@ -6,7 +6,7 @@
                 Ben gagne du temps, et fait gagner du temps aux éboueurs. Faites comme Ben !
             </h4><br>
             <div class="dispay_button">
-                <a class="button_redirect_user" routerLink="/inscription">En savoir plus ...</a><br>
+                <a class="button_redirect_user" target="_blank" href="https://www.ecologie.gouv.fr/recycler-sans-se-tromper-0">En savoir plus ...</a><br>
                 <a class="button_redirect_eboueur" routerLink="/connexion">MON ESPACE MEMBRE</a>
             </div>
         </div>
@@ -23,33 +23,3 @@
     </p>
 
 </div>
-    <!-- Messenger Plugin de discussion Code -->
-    <div id="fb-root"></div>
-
-    <!-- Your Plugin de discussion code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
-
-    <script>
-      var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "104088039219024");
-      chatbox.setAttribute("attribution", "biz_inbox");
-    </script>
-
-    <!-- Your SDK code -->
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          xfbml            : true,
-          version          : 'v15.0'
-        });
-      };
-
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/fr_FR/sdk/xfbml.customerchat.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
