--- a/src/app/modules/admin/nav-bar-admin/nav-bar-admin.component.css
+++ b/src/app/modules/admin/nav-bar-admin/nav-bar-admin.component.css
@@ -1,4 +1,99 @@
-#logo {
+
+/* LES BOUTONS ----------------------------------------------- */
+
+.simple_button{
+    color: black;
+    border-radius: 50px;
+    height: 40%;
+    align-items: center;
+    display: flex;
+    cursor: pointer;;
+}
+.simple_button:hover{
+    color: #50b996;
+}
+.green_button{
+    background-color: #27c9ac;
+    background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+    color: white;
+    border-radius: 50px;
+    height: 53%;
+    align-items: center;
+    display: flex;
+    margin-left: 10px;
+    padding: 0 20px;
+    cursor: pointer;
+    border: none;
+    
+}
+.green_button:hover{
+  background-color: none;
+    background-image: none;
+    color: rgb(255, 255, 255);
+    border: none;
+    margin-left: 10px;
+}
+.bouton_align{
+    flex-direction:row;
+    width: auto;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    margin-right: 15px;
+}
+
+
+/*Burger menu*/
+
+
+p {
+	text-align: center;
+  padding: 20px;
+}
+
+.toggle,
+[id^=drop] {
+	display: none;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    background-color: ghostwhite;
+  
+}
+
+.light .flex-container{
+  background-color: rgb(228, 228, 228);
+}
+
+.bouton_align {
+  cursor: pointer;
+  border-radius: 0 0 15px 15px;
+}
+
+nav { 
+    width: 98%;
+    height: 80px;
+    z-index: 1;
+    position: fixed;
+    top: 2%;
+    right: 1%;
+    left: 1%;
+    border-radius: 17px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.dark #mainHeader {
+  background-color: #000000a9;
+}
+.light  #mainHeader{
+  background-color: #edeaeaa9;
+}
+
+#logo{
     height: 73%;
     width: auto;
     margin-left: 10px;
@@ -7,77 +102,117 @@
     cursor: pointer;
 }
 
-
-a {
-    text-decoration: none;
-}
-
-a:visited {
-    color: black;
-}
-
-.spanSvg {
-    width: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-
-
-.svg_NavBarAdmin {
-    align-items: center;
-    height: 50px;
-    margin-top: auto;
-    margin-bottom: auto;
-    cursor: pointer;
-}
-
-.flex-container {
-    display: flex;
-    justify-content: space-between;
-
-}
-
-.bouton_align {
-    flex-direction: row;
-    width: auto;
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
-    margin-right: 15px;
-}
-
 nav ul {
     padding: 0;
-    margin: 0;
+    margin: 2%;
     list-style: none;
-    width: 30%;
-}
+	}
 
 nav ul li {
-    margin: 0px;
-    display: inline-block;
-    font-size: 22px;
+	margin: 0px;
+	display:inline-block;
+	
+	}
+
+
+nav a {
+	display:block;
+	padding:14px 20px;
+	font-size:17px;
+	text-decoration:none;
+}
+nav ul ul {
+	display: none  ;
+  position:relative;
 }
 
-nav {
-    background-color: #EDEDED;
-    width: 100%;
-    height: 80px;
-    z-index: 1;
-    /* border-radius: 17px; */
-    display: flex;
-
-    justify-content: space-between;
-    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
+nav ul li:hover > ul{
+	display: block  ;
+  position:absolute;
 }
 
-.active-link {
-    padding: 7px 7px 7px 7px;
-    background-color: #6FCEAE;
-    color: white !important;
-    text-decoration: none;
-    border-radius: 200px;
-    box-shadow: 0px 3px 4px rgb(168, 168, 168);
+/* Media Queries
+--------------------------------------------- */
+
+@media all and (max-width : 768px) {
+	nav {
+		margin: 0;
+    position:relative;
+    
+	}
+  
+  .menu{
+    position:absolute;
+    width:100%;
+    top:60px;
+  }
+  
+  #drop::after {
+	content:"";
+	display:block;
+	clear:both;
+}
+
+	.toggle + a,
+	.menu {
+		display: none;
+	}
+
+	.toggle {
+		display: block;
+		padding:14px 20px;	
+		color:rgb(0, 0, 0);
+		font-size:x-large;
+		text-decoration:none;
+		border:none;
+        float: right;
+        margin-top: auto;
+        margin-bottom: auto;
+	}
+  .toggle-left{
+    float: none;
+  }
+  
+  nav ul li:hover > ul{
+	display: none  ;
+  position: relative  ;
+    
+}
+.btn.openbtn.green_button {
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+/*  nav ul li:hover > ul{
+	
+}*/
+
+	[id^=drop]:checked + ul {
+		display: block;
+    margin-top: 1.5%;
+    font-weight: 600;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ffffffe6;
+    color: black;
+	}
+
+	nav ul li {
+		display: block;
+		width: 100%;
+		}
+
+}
+
+
+.button_darkmode{
+  cursor: pointer;
+  padding: 20px;
+  border: none;
+  border-radius: 70px;
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+  background-color: #6fb1b7;
 }
