--- a/src/app/modules/admin/declaration-detail/declaration-detail.component.html
+++ b/src/app/modules/admin/declaration-detail/declaration-detail.component.html
@@ -37,7 +37,7 @@
 
     <div style="display: flex; justify-content: center;">
         <button (click)="changeStatus('En attente')" style="margin: 1rem" class="btn edit">En attente</button>
-        <button (click)="changeStatus('Prendre en charge')" style="margin: 1rem" class="btn edit">Prendre en charge</button>
+        <button (click)="changeStatus('Pris en charge')" style="margin: 1rem" class="btn edit">Prendre en charge</button>
         <button (click)="changeStatus('Résolu')" style="margin: 1rem" class="btn edit">Résolu</button>
         <button (click)="back()" style="margin: 1rem" class="btn">Retour</button>
     </div>
