--- a/src/app/modules/admin/declaration/declaration.component.html
+++ b/src/app/modules/admin/declaration/declaration.component.html
@@ -4,7 +4,7 @@
 	<caption> 
 		<p>Liste des tickets le ticket</p>
 		<span style="display : flex; justify-content: space-evenly; margin: 1rem 0">
-			<button (click)="filter('En Attente')" class="btn">En Attente</button>
+			<button (click)="filter('En attente')" class="btn">En attente</button>
 			<button (click)="filter('Pris en charge')" class="btn">Pris en charge</button>
 			<button (click)="filter('Résolu')" class="btn">Résolu</button>
 			<button (click)="filter('')" class="btn">Réinitialiser</button>
