--- a/src/app/modules/admin/planning/planning.component.css
+++ b/src/app/modules/admin/planning/planning.component.css
@@ -78,17 +78,17 @@ li{
     height: 85%;
     width: 85%;
     border-radius: 300px;
-    background-color: #6FCEAE;
+    background-color: #5eda96;
+    background-image: linear-gradient(135deg, #5eda96 0%, #8186da 100%);
     color: white;
     font-size: 20px;
+    cursor: pointer;
 }
 
 #flexboxSemaine>form>img {
     background-color: white;
     height: 70%;
-
-
-
+    cursor: pointer;
 }
 
 .skipWeek {
@@ -207,8 +207,8 @@ li{
 
 .boutonValidé {
     padding: 7px 7px 7px 7px;
-    background-color: #27c9ac;
-    background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+    background-color: #5eda96;
+    background-image: linear-gradient(135deg, #5eda96 0%, #8186da 100%);
     color: white !important;
     text-decoration: none;
     border: none;
