--- a/src/app/modules/admin/planning/planning.component.html
+++ b/src/app/modules/admin/planning/planning.component.html
@@ -115,5 +115,5 @@
         </li>
         <div class="skipWeek"><i class="fi fi-rr-angle-right" (click)="nextWeek()"></i></div>
     </ul>
-    <input type='submit' class="boutonValidé" (click)="sendData()">
+    <input type='submit' class="boutonValidé" (click)="sendData()" value="Envoyer les modifications">
 </div>
