--- a/src/app/modules/admin/planning/planning.component.css
+++ b/src/app/modules/admin/planning/planning.component.css
@@ -153,7 +153,7 @@ li{
 
 
 .name-block {
-    padding: 20px 10px;
+    padding: 4px 10px;
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
 
@@ -183,18 +183,18 @@ li{
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
         0 8px 10px 1px rgba(0, 0, 0, 0.14),
         0 3px 14px 2px rgba(0, 0, 0, 0.12);
-    padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
+    padding: 4px 10px;
     color: rgba(0, 0, 0, 0.87);
     box-sizing: border-box;
     cursor: move;
-    /* background: white; */
     font-size: 14px;
     background-color: #6FCEAE;
     border-radius: 300px;
     color: white;
     font-size: 15px;
     font-weight: bold;
+    border: none;
+
 }
 
 .cdk-drag-placeholder {
