planning partie eboueur

--- a/src/app/modules/garbage-collector/components/profil-garbage-collector/profil-garbage-collector.component.html
+++ b/src/app/modules/garbage-collector/components/profil-garbage-collector/profil-garbage-collector.component.html
@@ -1,2 +1,59 @@
 <app-header-gc></app-header-gc>
-<p>profil-garbage-collector works!</p>
+<div id="planningBg">
+    <div id="flexboxSemaine">
+        <p>SEMAINE 42  || MOIS</p>
+
+    </div>
+
+    <ul id="dayFlexbox">
+        <li>
+            <p>LUNDI</p>
+            <div class="dayBackground">
+                <div class="name-block">
+                    <p>FOREACH LUNDI</p>
+                </div>
+            </div>
+        </li>
+        <li>
+            <p>MARDI</p>
+            <div class="dayBackground">
+                <div class="name-block">
+                    <p>FOREACH MARDI</p>
+                </div>
+            </div>
+        </li>
+        <li>
+            <p>MERCREDI</p>
+            <div class="dayBackground">
+                    <div class="name-block" cdkDrag>
+                    <p>FOREACH MERCREDI</p>
+                </div>
+            </div>
+        </li>
+        <li>
+            <p>JEUDI</p>
+            <div class="dayBackground">
+                <div class="name-block">
+                    <p>FOREACH JEUDI</p>
+                </div>
+            </div>
+        </li>
+        <li>
+            <p>VENDREDI</p>
+            <div class="dayBackground">
+                <div class="name-block">
+                    <p>FOREACH VENDREDI</p>
+                </div>
+            </div>
+        </li>
+        <li>
+            <p>SAMEDI</p>
+            <div class="dayBackground">
+                <div class="name-block">
+                    <p>FOREACH SAMEDI</p>
+                </div>
+            </div>
+        </li>
+        
+    </ul>
+</div>
