--- a/src/app/modules/garbage-collector/components/declaration/declaration.component.html
+++ b/src/app/modules/garbage-collector/components/declaration/declaration.component.html
@@ -1,31 +1,24 @@
 <app-header-gc></app-header-gc>
+<div class="container">
  <h2>Nouvelle déclaration</h2>
 
     <form class="auth-form" id="declaration-form" #declarationForm="ngForm"
       (ngSubmit)="declarationForm.form.valid && onSubmit(declarationForm)">
 
-      <div class="photo_description">
+      
         <input type="text" name="title" ngModel #title="ngModel" class="declaration_style"
-          placeholder="Titre de votre déclaration">
+          placeholder="Titre de votre déclaration" required>
 
-        <select name="category" ngModel #category="ngModel" class="declaration_style">
-          <option value="">-- Choisissez la raison de votre déclaration --</option>
-          <option value="Probleme1"> Dégradation d'une benne </option>
+        <select name="category" ngModel #category="ngModel" class="declaration_style" required>
+          <option disabled value="">Choisissez la raison de votre déclaration</option>
+          <option selected value="Benne">Benne</option>
+          <option value="Autres">Autres</option>
         </select>
-      </div>
-
-      <!-- <geoapify-geocoder-autocomplete class="lieu_declaration" placeholder="Lieu de la déclaration (adresse de la benne)">
-      </geoapify-geocoder-autocomplete> -->
-      <input name="content" ngModel #content="ngModel" type="text" id="explication_decla"
-        placeholder="Expliquez votre problème en quelques lignes...">
-
-
-      <input name="image_src" ngModel #image_src="ngModel" type="file" id="photo_decla" name="declaration"
-        accept="image/png, image/jpeg">
+       <textarea name="content" ngModel #content="ngModel" cols="30" rows="10"></textarea>
 
       <div id="flex_">
-        <a href="#annuler" class="btn closebtn"> Annuler </a>
-        <button type="submit" class="btn"> Envoyer </button>
+        <button style="margin-top : 2rem" type="submit" class="btn"> Envoyer </button>
       </div>
 
     </form>
+  </div>
