--- a/src/app/modules/garbage-collector/components/declaration/declaration.component.css
+++ b/src/app/modules/garbage-collector/components/declaration/declaration.component.css
@@ -1,17 +1,10 @@
-h2 {
-  margin-bottom: 5%;
-  color: white;
+
+
+.coEnCours{
+text-align: center;
 }
 
-.text {
-  margin-bottom: 50px;
-}
-#flex_ {
-  justify-content: center;
-  display: flex;
-}
 .btn {
-  margin-left: 4%;
   margin-top: 5%;
   background: #ba9fa8;
   border-radius: 5px;
@@ -26,6 +19,7 @@ a.btn.closebtn {
 }
 .btn.openbtn {
   padding: 20px;
+  color: black;
 }
 .btn.openbtn:hover {
   box-shadow: 0 5px 5px 0px rgba(0, 0, 0, 0.4);
@@ -36,7 +30,7 @@ a.btn.closebtn {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.591);
+    background: rgba(0, 0, 0, 0.8);
     z-index: 99999;
     opacity: 0;
     -webkit-transition: opacity 400ms ease-in;
@@ -46,6 +40,8 @@ a.btn.closebtn {
   }
   
   .modal-content {
+    background: #E4E4E4;
+    height: auto;
     position: absolute;
     padding: 1.5rem;
     border-radius: 1rem;
@@ -55,9 +51,6 @@ a.btn.closebtn {
     right: 32.5%;
     display: flex;
     flex-direction: column;
-    box-shadow: -5px -5px 10px 4px rgb(0 0 0 / 10%), 5px 5px 10px 4px rgb(45 150 255 / 15%);
-    width: fit-content;
-    height: fit-content;
 }
   
   .modal:target {
@@ -71,58 +64,161 @@ a.btn.closebtn {
   
   
   .declaration_style{
-    padding: 10px;
-    width: 50%;
-    border-radius: 1rem;
-    background-color: #ffffffb5;
-    border: none;
-    margin: 10px;
+      border: none;
+      padding: 17px;
+      background-color: white;
+      border-radius: 8px;
+      margin-bottom: 10px;
+      width: 95%;
   }
 
   .lieu_declaration{
       border: none;
       padding: 0px 5px 0px 5px;
-      background-color:#ffffffb5;
+      background-color: white;
       border-radius: 8px;
       margin-bottom: 10px;
       width: 95%;
   }
   #explication_decla{
+      width: 70%;
       border: none;
-      height: 100px;
+      height: 150px;
       border-radius: 8px;
   }
   .photo_description{
       display: flex;
       flex-direction: row;
   }
-  input{
-    padding: 10px;
-    border-radius: 1rem;
-    background-color: #ffffffb5;
-    border: none;
-    margin: 10px;
-  }
-  #photo_decla{
-    background-color: #ffffff33;
-  }
+/*-------------------------------------------------------------------*/
+.container {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+overflow: auto;
+background-color: #5eda96;
+background-image: linear-gradient(135deg, #5eda96 0%, #8186da 100%);
+position: fixed;
+width: 100%;
+}
 
-#declaration-form {
-    display: inline-grid;
+h1 {
+  color: black;
 }
 
 
-  /*RESPONSIVE*/
 
-  @media all and (max-width : 800px) {
-    .modal-content{
-      width: auto;
-      position: initial;
-      border-radius: 0px;
-      height: 100%;
-      padding-top: 40%;
-    }
-    h2 {
-      text-align: center;
+form {
+display: flex;
+flex-flow: column nowrap;
+align-items: center;
+justify-content: space-between;
+padding: 25px;
+border-radius: 1rem;
+width: 500px;
+background-color: white;
+color: black;
+position: absolute;
+height: fit-content;
+z-index: 1;
+}
+
+
+/* Input */
+.auth-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.auth-form_input-block {
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+input, button {
+  all: unset;
+}
+
+input[type='text'],input[type='password'], select, textarea {
+  padding: 10px;
+  margin: 1rem 0;
+  border-radius: 1rem;
+  background-color: #ffffffc2;
+  border: none;
+  width: 100%;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+input:focus {
+  border-color: black ;
+}
+
+input.error {
+  border: 2px solid rgb(213, 84, 84);
+}
+
+button {
+margin-top: 5%;
+align-self: center;
+text-align: center;
+padding: 0.5rem 1rem;
+border-radius: 6rem;
+cursor: pointer;
+background-color: rgb(94, 104, 90);
+box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+color: white;
+}
+h2{
+color: black;
+}
+
+@media (max-width: 600px) { 
+h2{
+  color: white;
+}
+  .auth-container_block {
+      background-color: #5eda9600;
+      width: 100%;
+      border-radius: 0rem;
+      padding-top: 15%;
+      top: 0%;
+      bottom: 0%;
   }
+  input{
+    padding: 7px;
   }
+  img{
+    display: none;
+  }
+}
+input[type='checkbox']{
+width: 15px;
+height: 15px;
+background-color: rgb(228, 228, 228) !important;
+border-radius: 50px;
+}
+input[type='checkbox']:checked{
+width: 15px;
+height: 15px;
+background-color: rgb(47, 255, 0) !important;
+border-radius: 50px;
+}
+
+
+
+
+@keyframes animate {
+0% {
+  left: 0;
+}
+50% {
+  left: 100%;
+}
+0% {
+  left: 0;
+}
+}
+
+
