--- a/src/app/modules/user/components/carte/carte.component.html
+++ b/src/app/modules/user/components/carte/carte.component.html
@@ -1,12 +1,12 @@
-<div class="map-container">
-    <div class="map-frame">
-      <div id="map" class="map"></div>
+<div id="map" leaflet style="height: 400px;" [leafletBaseLayers]="baseLayers"
+    [leafletLayersControlOptions]="layersControlOptions" [leafletMarkerCluster]="markerClusterData" [leafletCenter]="center" [leafletZoom]="zoom" 
+    (leafletMarkerClusterReady)="markerClusterReady($event)">
+</div>
+
+<div id="search_bar_container">
+    <geoapify-geocoder-autocomplete placeholder="Entrez votre adresse ici" class="input_recherche"
+        (placeSelect)="placeSelected($event)"></geoapify-geocoder-autocomplete>
+    <div class="bouton_location" (click)="getGeolocation()">
+        <i class="fi fi-rs-marker"></i>
     </div>
-  </div>
-  
-  <div id="search_bar_container">
-      <geoapify-geocoder-autocomplete placeholder="Entrez votre adresse ici" class="input_recherche" (placeSelect)="placeSelected($event)"></geoapify-geocoder-autocomplete>
-      <div class="bouton_location" (click)="getGeolocation()">
-          <i class="fi fi-rs-marker"></i>
-      </div>
-  </div>
+</div>
