--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -60,7 +60,7 @@ p {
 	display: flex;
   justify-content: space-between;
   position: fixed;
-  
+  align-items: center;
 }
 
 .light .flex-container{
