--- a/src/app/modules/admin/declaration/declaration.component.css
+++ b/src/app/modules/admin/declaration/declaration.component.css
@@ -14,7 +14,7 @@ table {
 }
 
 table caption {
-	margin: 1rem 0;
+	margin: 100px 0 0 0;
 	color: slategray;
 	font-size: 1.5rem;
 	font-weight: 600;
