--- a/src/app/modules/garbage-collector/components/declaration/declaration.component.html
+++ b/src/app/modules/garbage-collector/components/declaration/declaration.component.html
@@ -1,23 +1,30 @@
 <app-header-gc></app-header-gc>
 <div class="container">
- <h2>Nouvelle déclaration</h2>
+
 
     <form class="auth-form" id="declaration-form" #declarationForm="ngForm"
       (ngSubmit)="declarationForm.form.valid && onSubmit(declarationForm)">
 
-      
+       <h3>Nouvelle déclaration</h3>
+       
+       <select name="category" ngModel #category="ngModel" class="declaration_style" required>
+          <option disabled value="">Choisissez la raison de votre déclaration</option>
+          <option selected value="Degradation d'une benne">Degradation d'une benne</option>
+          <option value="Probleme encombrant">Déchets autour des bennes (encombrant)</option>
+          <option value="Besoin renfort">Besoin d'un renfort eboueurs</option>
+          <option value="Probleme planning">Problème lié au planning</option>
+          <option value="conflit d'équipe">Problème avec l'équipe</option>
+          <option value="Autres">Autre</option>
+        </select>
+
         <input type="text" name="title" ngModel #title="ngModel" class="declaration_style"
           placeholder="Titre de votre déclaration" required>
 
-        <select name="category" ngModel #category="ngModel" class="declaration_style" required>
-          <option disabled value="">Choisissez la raison de votre déclaration</option>
-          <option selected value="Benne">Benne</option>
-          <option value="Autres">Autres</option>
-        </select>
-       <textarea name="content" ngModel #content="ngModel" cols="30" rows="10"></textarea>
+
+       <textarea name="content" ngModel #content="ngModel" cols="30" rows="10" placeholder="Veuillez expliquer votre problème"></textarea>
 
       <div id="flex_">
-        <button style="margin-top : 2rem" type="submit" class="btn"> Envoyer </button>
+        <button style="margin-top : 2rem" type="submit" class="btn"> Envoyer au support </button>
       </div>
 
     </form>
