--- a/src/app/modules/garbage-collector/components/eboueur-messages/eboueur-messages.component.css
+++ b/src/app/modules/garbage-collector/components/eboueur-messages/eboueur-messages.component.css
@@ -31,7 +31,7 @@ html, body{
     scrollbar-width:none;
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
+    margin: 0 0 70px 0;
 }
 
 #envoi_message{
@@ -120,6 +120,7 @@ html, body{
 }
 
 .nom_contact{
+    margin-top: 110px;
     text-align: center;
     margin-bottom: 3%;
 }
@@ -152,8 +153,8 @@ button {
     border: 2px solid rgba(255, 255, 255, 0);
     font-size: larger;
     position: fixed;
-    bottom: 15px;
-    right: 6%;
+    bottom: 11px;
+    right: 15%;
 }
 button:hover{
     background-color: white;
@@ -178,7 +179,7 @@ button:hover{
         display: none;
     }
     #liste_messages{
-        margin-top: 100px;
+        margin: 0 0 70px 0;
     }
     .flex_column{
         width: 100%;
@@ -202,3 +203,16 @@ button:hover{
     }
 }
 
+
+.message{
+    width: 100%;
+    height: 70px;
+    bottom: 0px;
+    position: fixed;
+    border: none;
+    left: 0;
+    padding: 0 0 0 15%;
+}
+.username{
+    visibility: hidden;
+}
