--- a/src/app/modules/garbage-collector/components/eboueur-messages/eboueur-messages.component.html
+++ b/src/app/modules/garbage-collector/components/eboueur-messages/eboueur-messages.component.html
@@ -22,40 +22,41 @@
             </div>
         </div>
     </div> -->
-   
-   
+            <h2 class="nom_contact">Groupe de discussion | Eboueurs</h2>
+
     <div id="liste_messages">
         <div class="flex_column">
-            <h2 class="nom_contact">Groupe de discussion | Eboueurs</h2>
+
             <div *ngFor="let chat of chats" class="mb">
                 <div class="message_destinataire">
-                    <h6>{{chat.username}}</h6>
-                    <div class="interieur_message_recu">
+                    <h6 *ngIf="chat.username != userMail">{{chat.username}}</h6>
+                    <div *ngIf="chat.username != userMail" class="interieur_message_recu">
 
-                    <div>
+                        <div>
+                            <h4>{{chat.message}}</h4>
+                        </div>
+
+                    </div>
+                    <h4 *ngIf="chat.username != userMail" class="heure_message">{{chat.timestamp | date:'HH:mm'}}</h4>
+                </div>
+
+                <div *ngIf="chat.username == userMail" class="message_envoye">
+                    <h4 class="heure_message">{{chat.timestamp | date:'HH:mm'}}</h4>
+                    <div class="interieur_message_envoye">
+
                         <h4>{{chat.message}}</h4>
                     </div>
-
                 </div>
-                <h4 class="heure_message">{{chat.timestamp | date:'HH:mm'}}</h4>
-            </div>
-
-            <div class="message_envoye">
-                <h4 class="heure_message">{{chat.timestamp | date:'HH:mm'}}</h4>
-                <div class="interieur_message_envoye">
-                    
-                <h4>{{chat.message}}</h4></div>
             </div>
         </div>
-       </div>
 
     </div>
     <form id="envoi_message" [formGroup]="form" (ngSubmit)="onChatSubmit(form.value)">
-        <input matInput formControlName="username" >
-        <input placeholder="Tapez votre message ..." matInput formControlName="message" >
+        <input class="username" matInput formControlName="username">
+        <input class="message" placeholder="Tapez votre message ..." matInput formControlName="message">
         <button type="submit" matSuffix mat-icon-button aria-label="Submit">
-            <i class="fi fi-rr-paper-plane"></i>
+            Envoyer
         </button>
     </form>
-       
+
 </div>
