--- a/src/app/modules/garbage-collector/components/profil-garbage-collector/profil-garbage-collector.component.css
+++ b/src/app/modules/garbage-collector/components/profil-garbage-collector/profil-garbage-collector.component.css
@@ -23,7 +23,7 @@
     width: inherit;
 }
 
-li{
+li {
     margin: 10px;
     width: 11%;
 }
@@ -35,10 +35,15 @@ li{
 
 
 .dayBackground {
-    height: 300px;
+    height: 400px;
     width: 100%;
     background-color: white;
     padding: 10px 5px 0 5px;
+
+}
+
+.dayBackground::-webkit-scrollbar {
+    display: none;
 }
 
 #flexboxSemaine>form {
@@ -134,21 +139,6 @@ li{
     font-weight: 600;
 
 }
-
-/* .wrapper {
-    margin: 25px auto;
-    max-width: 600px;
-    text-align: center;
-    padding: 0 20px;
-}
-
-.container {
-    width: 45%;
-    margin: 0 25px 25px 0;
-    display: inline-block;
-    vertical-align: top;
-} */
-
 
 
 
